Add avatar photo to homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,8 @@
             你好，我是<span>唐靖凯</span>，
             <br />记录 AI 相关思考与实践。
           </h1>
+
+          <img class="avatar" src="/images/avatar.jpg" alt="唐靖凯" loading="eager" />
           <p class="lead">
             这里会持续更新：Agent、工具链、工程实践、读书/读论文笔记，以及可复用的模板与代码。
           </p>
