Add: Search (Pagefind) + 404 page + README

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -51,6 +51,7 @@ const canonicalUrl = canonical
           <a href="/games">游戏</a>
           <a href="/life">生活</a>
           <a href="/now">Now</a>
+          <a href="/search">Search</a>
           <a href="/rss.xml">RSS</a>
         </div>
       </nav>
