--- a/src/pages/now/index.astro
+++ b/src/pages/now/index.astro
@@ -1,22 +1,7 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import { getCollection } from 'astro:content';
-
-type PostEntry = Awaited<ReturnType<typeof getCollection<'now'>>>[number];
-
-function pickFirstImageFromMarkdown(md: string): string | null {
-  const m1 = md.match(/!\[[^\]]*\]\(([^\s)]+)(?:\s+"[^"]*")?\)/);
-  if (m1?.[1]) return m1[1];
-
-  const m2 = md.match(/<img[^>]*\ssrc=["']([^"']+)["'][^>]*>/i);
-  if (m2?.[1]) return m2[1];
-
-  return null;
-}
-
-function pickCover(post: PostEntry): string | null {
-  return post.data.cover ?? pickFirstImageFromMarkdown(post.body);
-}
+import { pickCover } from '../../utils/contentPreview';
 
 const posts = (await getCollection('now'))
   .filter((p) => !p.data.draft)
